ux/tree-sitter-udon/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

; This is a comment

--------------------------------------------------------------------------------

(document
  (line_comment))

================================================================================
Line comment after element
================================================================================

|element ; trailing comment

--------------------------------------------------------------------------------

(document
  (element
    (element_name
      (identifier)))
  (line_comment))

================================================================================
Multiple line comments
================================================================================

; First comment
; Second comment
; Third comment

--------------------------------------------------------------------------------

(document
  (line_comment)
  (line_comment)
  (line_comment))

================================================================================
Comment with element
================================================================================

; Header comment
|article
  ; Nested comment
  :title Test

--------------------------------------------------------------------------------

(document
  (line_comment)
  (element
    (element_name
      (identifier)))
  (line_comment)
  (block_attribute
    (attribute_key
      (identifier))
    (block_bare_string)))
